* fix: update margin calc on avatar group to be more consice and readable

--- a/draft-packages/avatar/KaizenDraft/Avatar/AvatarGroup.module.scss
+++ b/draft-packages/avatar/KaizenDraft/Avatar/AvatarGroup.module.scss
@@ -2,6 +2,7 @@
 @import "~@kaizen/design-tokens/sass/shadow";
 @import "~@kaizen/design-tokens/sass/color";
 
+// Vars
 $avatar-sm: 1.25rem;
 $avatar-md: 3rem;
 $avatar-lg: 4.5rem;
@@ -11,6 +12,22 @@ $avatar-lg: 4.5rem;
   list-style: none;
   margin: 0;
   padding: 0;
+
+  &.small {
+    margin-inline-start: calc(#{$avatar-sm} / 2);
+  }
+
+  &.medium {
+    margin-inline-start: calc(#{$avatar-md} / 2);
+  }
+
+  &.large {
+    margin-inline-start: calc(#{$avatar-lg} / 2);
+  }
+
+  [dir="rtl"] & {
+    margin-inline-start: 0;
+  }
 }
 
 .AvatarGroupItem,
@@ -25,29 +42,6 @@ $avatar-lg: 4.5rem;
 
   .large & {
     margin-left: calc(#{$avatar-lg} / -2);
-  }
-}
-
-.AvatarGroupItem {
-  &:first-of-type {
-    margin-left: 0;
-    .small & {
-      [dir="rtl"] & {
-        margin-left: calc(#{$avatar-sm} / -2);
-      }
-    }
-
-    .medium & {
-      [dir="rtl"] & {
-        margin-left: calc(#{$avatar-md} / -2);
-      }
-    }
-
-    .large & {
-      [dir="rtl"] & {
-        margin-left: calc(#{$avatar-lg} / -2);
-      }
-    }
   }
 }
 
